latex scrollbar issues fix

--- a/src/components/Main/style.scss
+++ b/src/components/Main/style.scss
@@ -108,6 +108,7 @@ div {
     padding-bottom: 0;
     padding-top: 100px;
     width: 100vw;
+    overflow-x: hidden;
     @include basic-transition;
   }
 }
